--- a/SIMS/UI/Admin/MasterPageAdmin.Master
+++ b/SIMS/UI/Admin/MasterPageAdmin.Master
@@ -103,7 +103,7 @@
               </div>
              <%-- studentDiv--%>
               <div id="studentDiv" class="nav navbar-nav" runat="server">
-              <li><a href="../Student/StudentHome.aspx">Home</a></li>
+              <li><a href="../Student/StudentHome.aspx">My Information</a></li>
               <li><a href="../Student/StudentResult.aspx">Result</a></li>
                <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
