--- a/SIMS/UI/Admin/MasterPageAdmin.Master
+++ b/SIMS/UI/Admin/MasterPageAdmin.Master
@@ -88,7 +88,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="Home.aspx">SIMS</a>
+          <a class="navbar-brand" href="">SIMS</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-left">
